<resources>
    <string name="app_name">Basics</string>

    <!-- Main Activity -->
    <string name="tv_main_title">Android Basics</string>
    <string name="btn_calc_text">Calculator</string>
    <string name="btn_rates_text">Currency rates</string>
    <string name="btn_chat_text">Chat</string>
    <string name="btn_exit">Exit</string>

    <!-- Calc Activity -->
    <string name="plus_sign">+</string>
    <string name="minus_sign">−</string>
    <string name="multiply_sign">×</string>
    <string name="divide_sign">÷</string>
    <string name="equals_sign">=</string>

    <string name="backspace_sign">⌫</string>
    <string name="decimal_sign">,</string>
    <string name="negate_sign">⁺/₋</string>
    <string name="percent_sign">%</string>
    <string name="inverse_sign">¹/ₓ</string>
    <string name="square_sign">X²</string>
    <string name="sqrt_sign">√x</string>

    <string name="clear_entry">ce</string>
    <string name="clear_text">c</string>

    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>

    <string name="division_by_zero">Cannot divide by zero</string>
    <string name="invalid_sqrt">Complex numbers not supported</string>

    <!-- Game Activity -->
    <string name="game_title">2048</string>
    <string name="game_tile_2">2</string>
    <string name="game_tile_4">4</string>
    <string name="game_tile_8">8</string>
    <string name="game_tile_16">16</string>
    <string name="game_tile_32">32</string>
    <string name="game_tile_64">64</string>
    <string name="game_tile_128">128</string>
    <string name="game_tile_256">256</string>
    <string name="game_tile_512">512</string>
    <string name="game_tile_1024">1024</string>
    <string name="game_tile_2048">2048</string>
    <string name="game_tile_4096">4096</string>
    <string name="game_tile_8192">8192</string>
    <string name="game_tile_16184">16184</string>
    <string name="game_tile_32368">32368</string>
    <string name="game_btn_new_text">NEW</string>
    <string name="game_btn_undo_text">UNDO</string>
    <string name="game_score_pattern">SCORE\n%d</string>
    <string name="game_best_score_pattern">BEST\n%d</string>
    <string name="game_victory_title">Win</string>
    <string name="game_victory_message">You gathered 2048</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_new_game">New Game</string>
    <string name="in_development">In development</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">You lost</string>

    <!-- Rates Activity -->
    <string name="tv_rates_title">Currency rates</string>
    <string name="nbu_api_url">https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json</string>

    <!-- Chat Activity -->
    <string name="chat_api_url">https://express-messages-api.onrender.com</string>
    <string name="chat_user_name_title">Name:</string>
    <string name="chat_default_user">anon</string>
    <string name="chat_message_title">Msg:</string>
    <string name="chat_default_message">Hello</string>
    <string name="btn_send_message">Send</string>
    <string name="channel_name">Chat</string>
    <string name="channel_description">Chat Notification Channel</string>
    <string name="channel_id">CHAT_NOTIFY</string>
</resources>